--- a/2.CodingAssingment_Unit-5/app/src/main/res/layout/item_layout.xml
+++ b/2.CodingAssingment_Unit-5/app/src/main/res/layout/item_layout.xml
@@ -14,6 +14,7 @@
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:id="@+id/cardView"
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
 
