--- a/2.CodingAssingment_Unit-5/app/src/main/res/layout/item_layout.xml
+++ b/2.CodingAssingment_Unit-5/app/src/main/res/layout/item_layout.xml
@@ -25,11 +25,10 @@
 
 
             <ImageView
-                android:layout_centerVertical="true"
                 android:id="@+id/ivImage"
                 android:layout_width="120dp"
                 android:layout_height="100dp"
-                android:src="@color/black" />
+                android:layout_centerVertical="true" />
 
             <TextView
                 android:id="@+id/tvCountryName"
