--- a/4.AddressSearch_by_city/app/src/main/res/layout/fragment_home.xml
+++ b/4.AddressSearch_by_city/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -10,13 +10,28 @@
         tools:context=".ui.HomeFragment">
 
 
-        <EditText
-            android:id="@+id/etCityName"
-            android:textColorHint="@color/white"
+<!--        <EditText-->
+<!--            android:id="@+id/etCityName"-->
+<!--            android:textColorHint="@color/black"-->
+<!--            android:padding="10dp"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@drawable/rectangle"-->
+<!--            android:layout_margin="20dp"-->
+<!--            android:drawablePadding="10dp"-->
+<!--            android:drawableStart="@drawable/ic_baseline_arrow_back_24"-->
+<!--            android:hint="Enter city name" />-->
+
+        <com.arlib.floatingsearchview.FloatingSearchView
+            android:id="@+id/floating_search_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:hint="enter city name" />
+            android:layout_height="match_parent"
+            app:floatingSearch_searchHint="Search..."
+            app:floatingSearch_suggestionsListAnimDuration="250"
+            app:floatingSearch_showSearchKey="false"
+            app:floatingSearch_leftActionMode="showHamburger"
+            app:floatingSearch_close_search_on_keyboard_dismiss="true"/>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
