--- a/4.AddressSearch_by_city/app/src/main/res/layout/item_layout.xml
+++ b/4.AddressSearch_by_city/app/src/main/res/layout/item_layout.xml
@@ -48,9 +48,9 @@
                 android:layout_below="@+id/_tvId"
                 android:layout_marginStart="20sp"
                 android:layout_marginTop="15dp"
-                android:text="Address String : "
-                android:textColor="@color/black"
                 android:layout_marginBottom="10dp"
+                android:text="Address \nString : "
+                android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
