--- a/5.Itunes_Application_Retorfit_RxJava_Room_Caching_Testing/app/src/main/res/layout/item_layout.xml
+++ b/5.Itunes_Application_Retorfit_RxJava_Room_Caching_Testing/app/src/main/res/layout/item_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -10,7 +10,11 @@
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_margin="5dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="10dp"
+        android:background="@android:color/transparent"
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -20,6 +24,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:src="@color/black"
+                android:scaleType="centerCrop"
                 android:id="@+id/artist_image"
                 android:layout_height="150dp"/>
 
@@ -28,7 +33,9 @@
                 android:layout_below="@+id/artist_image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
+                android:text="@{resultModel.artistName}"
                 android:textSize="18sp"
+                android:layout_marginBottom="10dp"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
